--- a/soussbeautyy/miel-proj/src/App.css
+++ b/soussbeautyy/miel-proj/src/App.css
@@ -5,7 +5,9 @@
   padding: 0;
   display: flex;
   flex-direction: column;
-background: linear-gradient(135deg, #fada5e, #d4af37, #b8860b);
+
+background: linear-gradient(135deg, #f0c419, #d4af37, #a97142);
+
 
 
 
