--- a/soussbeautyy/miel-proj/src/App.css
+++ b/soussbeautyy/miel-proj/src/App.css
@@ -6,7 +6,9 @@
   display: flex;
   flex-direction: column;
 
-background: linear-gradient(135deg, #f0c419, #d4af37, #a97142);
+
+
+background-image: radial-gradient( circle 971px at 10.4% 51.2%,  rgba(236,105,65,1) 0%, rgba(236,219,65,1) 52.1%, rgba(245,233,226,1) 99.3% );
 
 
 
